--- a/scss/main.css
+++ b/scss/main.css
@@ -194,6 +194,4 @@ a:hover {
     transform: scale(0.99);
     box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
   }
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=main.css.map */
