--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,214 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Sofia+Sans+Extra+Condensed:ital,wght@1,100&display=swap');
+//imports
 
-*{
-    font-family: 'Sofia Sans Extra Condensed', sans-serif;;
-    margin: 0;
-    padding: 0;
-}
-
-/* font size 62.5% */
-/* rem = 16px aprox */
-/* 1 rem = 10px */
-
-
-/* Selector de etiqueta */
-
-html{
-font-size: 62.5%;
-}
-
-
-
-        h1{
-        color: #0083a6;
-        font-weight: 700;
-        font-size: 3.5rem;
-        }
-
-        h2{
-        color: #0083a6;
-        font-weight: 700;
-        font-size: 3.5rem;
-        } 
-
-        h3{
-            color: #0083a6;
-            font-weight: 700;
-            font-size: 3.5rem;
-            } 
-
-        h4{
-            color: #000000;
-            font-size: 2rem;
-            font-weight: 700;
-        }
-
-        p{
-            color: #0083a6;
-            font-weight: 700;
-            font-size: 3.5rem;
-        } 
-
-        label{
-            color: #0083a6;
-            font-weight: 700;
-            font-size: 3.5rem;
-            display: block;
-        }     
-
-    nav{
-    background-color: rgba(241, 241, 241, 0.88);
-    /* padding */
-    padding: 8px 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    }
-
-        nav ul{
-            list-style: none;
-            display: flex;
-    }
-    
-        nav ul li{
-            margin-right: 10px;
-            display: flex;
-    }
-
-        nav ul li a{
-
-            margin-left: 30px;
-            display: flex;
-            color: #0000ff;
-            text-decoration: none;
-            font-weight: 900;
-            font-size: 3rem;
-            line-height: 55px;
-            /* Va a la derecha */
-        }
-
-
-footer{
-    background-color: rgba(118, 138, 140, 0.5);
-}    
-
-    footer ul{
-        list-style: none;          
-    }
-
-    footer ul li{
-        display: inline-block;
-        margin: 1.5rem;
-    }        
-
-        footer ul li a{
-        
-            display:inline-block;
-
-            
-        color: #0084a8;
-    text-decoration: none;
-        font-weight: 600;
-    font-size: 2.5rem;
-        line-height: 30px;
-    
-        }
-
-
-       a:hover{
-            cursor: pointer;
-            animation: pulse 1.5s infinite;
-        }
-        
-/* selector de clases */
-.text-black{
-    color: #000000
-}
-
-.text-blue{
-    color: #0083a6
-}
-
-.text-center{
-text-align: center;
-}    
-
-.text-right{
-    text-align: right;
-}     
-
-.text-left{
-text-align: left;
-} 
-
-.text-bold{
-    font-weight: 600;
-}
-
-.width-size{
-    width: 100%;
-}
-
-.top-margin{
-    margin-top: 10px;
-}
-
-.text-size{
-    font-size: 2.5rem;
-}
-
-.contenedor{
-    display: flex;
-    padding: 25px;
-    justify-content: center;
-}
-
-.text{
-padding-left: 25px;
-}
-
-
-.img-center {
-    margin: 0;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    padding: 15px;
-}
-
-.botonera ul li a{
-font-size: 3rem;
-color:#0084a8;
-font-weight: 900;
-line-height: 55px;
-}
-/* BEM */
-
-
-
-
-.logo{
-    width: 250px;
-    height: auto;
-    padding-left: 35px;
-    padding-top: 10px;
-}
-
-.servicios{
-padding: 15px;
-}
-
-@keyframes pulse {
-0% {
-transform:scale(.99);
-box-shadow: 0 0 0 0 rgba(256, 256,256, .1);
-}
-70% {
-transform:scale(1);
-box-shadow: 0 0 0 25px rgba(256, 256,256, 0);
-}
-100% {
-transform:scale(.99);
-box-shadow: 0 0 0 0 rgba(256, 256,256, 0);
-}
-}
+@import "_vars";
+@import "_commons";
+@import "_mixins";
