--- a/CSS/main.css
+++ b/CSS/main.css
@@ -61,18 +61,15 @@ nav {
   justify-content: space-between;
   align-items: center;
 }
-
 nav ul {
   font-family: "Sofia Sans Extra Condensed", sans-serif;
   display: flex;
 }
-
-nav ul li {
+nav li {
   font-family: "Sofia Sans Extra Condensed", sans-serif;
   display: flex;
 }
-
-nav ul li a {
+nav a {
   font-family: "Sofia Sans Extra Condensed", sans-serif;
   margin-left: 30px;
   display: flex;
@@ -87,19 +84,16 @@ footer {
   font-family: "Sofia Sans Extra Condensed", sans-serif;
   background-color: rgba(118, 138, 140, 0.5);
 }
-
 footer ul {
   font-family: "Sofia Sans Extra Condensed", sans-serif;
   list-style: none;
 }
-
-footer ul li {
+footer li {
   font-family: "Sofia Sans Extra Condensed", sans-serif;
   display: inline-block;
   margin: 1.5rem;
 }
-
-footer ul li a {
+footer a {
   display: inline-block;
   color: #0083a6;
   text-decoration: none;
