--- a/CSS/main.css
+++ b/CSS/main.css
@@ -148,7 +148,7 @@ a:hover {
   width: 100%;
   height: 30%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   padding: 15px;
 }
 
