--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -156,7 +156,7 @@ h2 {
     width: 100%;
     height: 30%;
     display: flex;
-    justify-content: space-between;
+    justify-content:center;
     padding: 15px;
   }
 
